Изменено: работа над замечаниями, смена имени на идентификатор
