# src/main/resources/swagger.yaml
@@ -419,18 +419,13 @@ paths:
             Ветка обсуждения отсутсвует в форуме.
           schema:
             $ref: '#/definitions/Error'
-  /user/{id}:
+  /user:
     post:
       summary: Создание нового пользователя
       description: |
         Создание нового пользователя в базе данных.
       operationId: userCreate
       parameters:
-        - name: id
-          in: path
-          description: Идентификатор пользователя.
-          required: true
-          type: string
         - name: profile
           in: body
           description: Данные пользовательского профиля.
@@ -450,6 +445,7 @@ paths:
             Возвращает данные ранее созданных пользователей с тем же nickname-ом иои email-ом.
           schema:
             $ref: '#/definitions/Users'
+  /user/{id}:
     get:
       summary: Получение информации о пользователе
       description: |
